RichwoodNew/src/objects/Part__c.object
<CustomObject>
    <fields>
        <fullName>Account_Alloy_Reference__c</fullName>
        <inlineHelpText>If this account uses a different reference number for their alloy for this part, note that reference here.</inlineHelpText>
        <label>Account Alloy Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contracted_Price__c</fullName>
        <label>Contracted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Proof/Samples Produced</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Deprecated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Account_Alloy_Reference__c</columns>
        <columns>Contracted_Price__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>